modified:   src/App.css 	modified:   src/App.js 	modified:   src/COMPONENTS/AudioRecorder.js 	modified:   src/COMPONENTS/LandingPage.js 	modified:   src/COMPONENTS/LoginModal.js 	modified:   src/COMPONENTS/Record&Details.js 	modified:   src/COMPONENTS/SignupModal.js 	modified:   src/COMPONENTS/SongDetails.js 	modified:   src/CSS/AudioRecorder.css 	modified:   src/CSS/LandingPage.css 	modified:   src/CSS/Login.css 	deleted:    src/CSS/Record&Details.css 	modified:   src/CSS/Signup.css 	modified:   src/CSS/SongDetails.css 	modified:   src/SERVICES/audioRecognition.js 	modified:   src/SERVICES/firebase.js 	modified:   src/SERVICES/songDetails.js 	modified:   src/SERVICES/songLyrics.js 	modified:   src/SERVICES/streamingLinks.js

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .App {
   text-align: center;
 }
-
+.App-background{
+  background-image: url('https://wallpapers.com/images/high/cute-music-dj-minion-v1ne0ttida4e6bfn.webp');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
